dark mode fixes

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -34,6 +34,8 @@ $nav-tabs-link-active-color: $body-color;
 $toc-inactive-border: rgba($gray-800, 0.5);
 $input-text-background-color: $gray-800;
 $input-group-addon-bg: $gray-800;
+$carousel-dark-caption-color: $body-color;
+
 /*-- scss:rules --*/
 
 .layout-example {
